--- a/app/src/main/res/layout/activity_shape.xml
+++ b/app/src/main/res/layout/activity_shape.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="5dp"
     >
 
     <TextView
@@ -29,11 +30,19 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:text="X"
-          android:gravity="center"
-        android:background="@drawable/bg_ring"
-        android:ellipsize="end"
+    android:gravity="center"
+    android:background="@drawable/bg_ring"
+    android:ellipsize="end"
+    />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="selector设置按钮"
+        android:textColor="@drawable/text_btn_selector"
+        android:background="@drawable/bg_btn_selector"
         />
 
 
 
-</LinearLayout>
+
+    </LinearLayout>
